--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,6 +31,7 @@ jobs: # A basic unit of work in a run
             - "venv"
       - run:
           command: |
+            pipenv run python pip install appTaking/requirements.txt
             pipenv run python appTaking/manage.py test
       - store_test_results: # Upload test results for display in Test Summary: https://circleci.com/docs/2.0/collect-test-data/
           path: test-results
